@@ -1,3 +1,10 @@
+2004-09-18  Alf Watt  <alfwatt@users.sourceforge.net>
+
+	* configure: Regen.
+	* tcljava.m4 (AC_JAVA_CLASSPATH): Add support
+	for building Jacl under Darwin.
+	[Bug 1004860]
+
 2004-09-18  Alexander James Pasadyn  <ajpasadyn@users.sourceforge.net>
 
 	* src/jacl/tcl/lang/library/init.tcl: Loop over
